objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Bottles_per_Pallet__c</fullName>
        <description>Bottles per Pallet</description>
        <label>Bottles per Pallet</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Box_per_Pallet__c</fullName>
        <formula>IF(bottles_per_box__c = 0, 0, Bottles_per_Pallet__c /  bottles_per_box__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Box per Pallet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CD_Unit__c</fullName>
        <label>Código da unidade</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_Wherehouse__c</fullName>
        <label>Código do armazém</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <externalId>true</externalId>
        <label>Código de país</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Descricao_SchedulerC__c</fullName>
        <label>Descrição Sch C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>Catálogo de preço</description>
        <label>Grupo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_id__c</fullName>
        <externalId>true</externalId>
        <label>Id Interno(Chave)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_BrandGrouping__c</fullName>
        <description>Field used to group products by brand</description>
        <label>Brand</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_CategoryGrouping__c</fullName>
        <description>Field used to group products by category</description>
        <label>Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_Descricao_SchedulerC__c</fullName>
        <description>This is used in the Brazilian ROI report to match the contract product and the real product (coleta) to the Informacoes_do_Produto__r.Descricao_SchedulerC__c field in order to obtain the product cost and other informations.</description>
        <label>Descrição Sch C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_ImageURL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LAT_IsRefactorProduct__c</fullName>
        <description>This field indentifies records that are used in the new product schema with the project Account-Product-Payment object.
Fields with the new schema should be loaded with the value &quot;Y&quot;</description>
        <externalId>true</externalId>
        <label>Is refactor product?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_AlcoholContent__c</fullName>
        <description>Product alcoholic content</description>
        <label>Alcohol Content</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LAT_MX_BarCode__c</fullName>
        <description>Product bar code</description>
        <label>Bar Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_BoxDimensions__c</fullName>
        <description>Specifies box dimensions</description>
        <label>Box Dimensions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Capacity__c</fullName>
        <description>Bottle capacity</description>
        <label>Capacity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_CaseDimensions__c</fullName>
        <description>Specifies case dimensions</description>
        <label>Case Dimensions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_ClientStock__c</fullName>
        <description>Client Stock</description>
        <label>Client Stock</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_MX_IEPSDescription__c</fullName>
        <description>IEPS tax description</description>
        <label>IEPS Description</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_OriginCountry__c</fullName>
        <description>Country where the product is from</description>
        <label>Origin Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_PalletOrganization__c</fullName>
        <description>Specifies how the pallet is organized</description>
        <label>Pallet Organization</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Quality__c</fullName>
        <label>Quality</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_StockPRM__c</fullName>
        <description>PRM Product Stock</description>
        <label>Warehouse Stock PR</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_ScheduleC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ScheduleC</label>
        <referenceTo>LAT_ScheduleC__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>LAT_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Bonus__c</fullName>
        <label>Bônus percentual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QT_Bonus__c</fullName>
        <label>Quantidade bônus</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QT_base_bonus__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantidade Base de Bônus</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QT_lead_time__c</fullName>
        <label>Prazo de entrega</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QT_multiple__c</fullName>
        <label>Quantidade Múltiplo</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduler__c</fullName>
        <label>Código de scheduler</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bottles_per_box__c</fullName>
        <label>Quantidade garrafas por caixa</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cd_payment_term__c</fullName>
        <label>Condição de pagamento</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer_Group__c</fullName>
        <label>Grupo de cliente</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ds_payment_term__c</fullName>
        <label>Descrição da condição de pagamento</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unit_weight__c</fullName>
        <label>Peso por unidade</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AR_Productos</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>SKU__c</columns>
        <columns>bottles_per_box__c</columns>
        <columns>unit_weight__c</columns>
        <columns>LAT_MX_BarCode__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Internal_id__c</columns>
        <columns>Scheduler__c</columns>
        <columns>LAT_ScheduleC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Internal_id__c</field>
            <operation>startsWith</operation>
            <value>6-</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LAT_IsRefactorProduct__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <label>AR - Productos</label>
        <language>pt_BR</language>
        <sharedTo>
            <group>IT_LATAM_Administrators</group>
            <group>LAT_CRM_IT_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>SKU__c</columns>
        <columns>bottles_per_box__c</columns>
        <columns>LAT_MX_BarCode__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Internal_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Internal_id__c</field>
            <operation>startsWith</operation>
            <value>12</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LAT_IsRefactorProduct__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <label>MX - Productos</label>
        <language>pt_BR</language>
        <sharedTo>
            <roleAndSubordinates>MX_Presidente</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UY_Productos</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>SKU__c</columns>
        <columns>bottles_per_box__c</columns>
        <columns>unit_weight__c</columns>
        <columns>LAT_MX_BarCode__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Internal_id__c</columns>
        <columns>LAT_ScheduleC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Internal_id__c</field>
            <operation>startsWith</operation>
            <value>1-</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LAT_IsRefactorProduct__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <label>BR - Productos</label>
        <language>pt_BR</language>
        <sharedTo>
            <group>IT_LATAM_Administrators</group>
            <group>LAT_CRM_IT_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UY_ProductosAdmin</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>SKU__c</columns>
        <columns>LAT_ScheduleC__c</columns>
        <columns>bottles_per_box__c</columns>
        <columns>unit_weight__c</columns>
        <columns>LAT_MX_BarCode__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Internal_id__c</columns>
        <columns>Scheduler__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Internal_id__c</field>
            <operation>contains</operation>
            <value>5-</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LAT_IsRefactorProduct__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <label>UY - Productos</label>
        <language>pt_BR</language>
        <sharedTo>
            <group>IT_LATAM_Administrators</group>
            <group>LAT_CRM_IT_Users</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>BRA_Standard_Archived</fullName>
        <active>true</active>
        <label>BRA Standard Archived</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_PRD_Standard</fullName>
        <active>true</active>
        <description>Record Type standard for Mexico</description>
        <label>MX Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_AR</fullName>
        <active>true</active>
        <description>Argentina standard record type</description>
        <label>Standard AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_UY</fullName>
        <active>true</active>
        <description>Uruguay standard record type</description>
        <label>Standard UY</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>